5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1828_3183.log
== TEST (2019-06-12 14:35:32) 
-- CODE:
from numpy impor*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 1
    from numpy impor*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:35:42) 
-- CODE:
x =int(input())
y = arange(x)
z = zeros(x*2, dtype)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 7
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:35) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:52) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:53) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:53) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:53) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- ERROR:
File "XXXX", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:36:55) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for in in range(x,0,-1):
	print(i)
	
-- EXECUTION TIME:
0.818262
-- ERROR:
  File "/home/codebench/codes/1828/3183/main.py", line 8
    for in in range(x,0,-1):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:38:18) 
-- CODE:
from numpy import*
x =int(input())
y = arange(x)
z = zeros(x*2, dtype==int)
j =0
i = -1

for i in range(x,0,-1):
	print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
